# app/Http/Controllers/Controller.php
@@ -163,7 +163,6 @@ use Illuminate\Routing\Controller as BaseController;
  *          @OA\Property(property="status", type="string", example="rented"),
  *          @OA\Property(property="mileage", type="integer", example=10383),
  *          @OA\Property(property="license_plate", type="string", example="J949YJ 93"),
- *          @OA\Property(property="year", type="integer", example=2003),
  *          @OA\Property(property="price_minute", type="integer", example=2),
  *       ),
  *   ),
@@ -178,7 +177,6 @@ use Illuminate\Routing\Controller as BaseController;
  *      @OA\Property(property="status", type="string", example="rented"),
  *      @OA\Property(property="mileage", type="integer", example=10383),
  *      @OA\Property(property="license_plate", type="string", example="J949YJ 93"),
- *      @OA\Property(property="year", type="integer", example=2003),
  *      @OA\Property(property="price_minute", type="integer", example=2),
  *     ),
  * ),
@@ -189,7 +187,6 @@ use Illuminate\Routing\Controller as BaseController;
  *      @OA\Property(property="status", type="string", example="rented"),
  *      @OA\Property(property="mileage", type="integer", example=10383),
  *      @OA\Property(property="license_plate", type="string", example="J949YJ 93"),
- *      @OA\Property(property="year", type="integer", example=2003),
  *      @OA\Property(property="location", type="string", example="-35.71 -45.96609"),
  *      @OA\Property(property="price_minute", type="integer", example=2),
  * ),
@@ -203,7 +200,6 @@ use Illuminate\Routing\Controller as BaseController;
  *      @OA\Property(property="status", type="string", example="rented"),
  *      @OA\Property(property="mileage", type="integer", example=10383),
  *      @OA\Property(property="license_plate", type="string", example="J949YJ 93"),
- *      @OA\Property(property="year", type="integer", example=2003),
  *      @OA\Property(property="location", type="string", example="-35.71 -45.96609"),
  *      @OA\Property(property="price_minute", type="integer", example=2),
  *      ),
@@ -259,7 +255,9 @@ use Illuminate\Routing\Controller as BaseController;
  *          @OA\Property(property="door_count", type="integer", example=4),
  *          @OA\Property(property="seat_count", type="integer", example=4),
  *          @OA\Property(property="gear_box", type="string", example="manual"),
+ *          @OA\Property(property="drive_type", type="string", example="full"),
  *          @OA\Property(property="engine_power", type="integer", example=140),
+ *          @OA\Property(property="year", type="integer", example=2022),
  *       ),
  *    ),
  * ),
@@ -276,7 +274,9 @@ use Illuminate\Routing\Controller as BaseController;
  *      @OA\Property(property="door_count", type="integer", example=4),
  *      @OA\Property(property="seat_count", type="integer", example=4),
  *      @OA\Property(property="gear_box", type="string", example="automatic"),
+ *      @OA\Property(property="drive_type", type="string", example="full"),
  *      @OA\Property(property="engine_power", type="integer", example=300),
+ *      @OA\Property(property="year", type="integer", example=2022),
  *      ),
  * ),
  * @OA\Schema(
@@ -289,7 +289,9 @@ use Illuminate\Routing\Controller as BaseController;
  *      @OA\Property(property="door_count", type="integer", example=4),
  *      @OA\Property(property="seat_count", type="integer", example=5),
  *      @OA\Property(property="gear_box", type="string", example="manual"),
+ *      @OA\Property(property="drive_type", type="string", example="full"),
  *      @OA\Property(property="engine_power", type="integer", example=220),
+ *      @OA\Property(property="year", type="integer", example=2022),
  * ),
  * @OA\Schema(
  *  schema="CarModelChange",
@@ -304,7 +306,9 @@ use Illuminate\Routing\Controller as BaseController;
  *      @OA\Property(property="door_count", type="integer", example=4),
  *      @OA\Property(property="seat_count", type="integer", example=5),
  *      @OA\Property(property="gear_box", type="string", example="automatic"),
+ *      @OA\Property(property="drive_type", type="string", example="full"),
  *      @OA\Property(property="engine_power", type="integer", example=152),
+ *      @OA\Property(property="year", type="integer", example=2022),
  *      ),
  * ),
  * @OA\Schema(
@@ -326,6 +330,11 @@ use Illuminate\Routing\Controller as BaseController;
  *  schema="CarModelGearBoxType",
  *  title="CarModelGearBoxType",
  *      @OA\Property(property="gear_box", type="string", example="manual"),
+ * ),
+ * @OA\Schema(
+ *  schema="CarModelDriveType",
+ *  title="CarModelDriveType",
+ *      @OA\Property(property="drive_type", type="string", example="full"),
  * ),
  * @OA\Schema(
  *  schema="Rent",
