# app/Http/Requests/CarModel/UpdateDriveTypeRequest.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Requests\CarModel;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateDriveTypeRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'drive_type' => 'required|string',
+        ];
+    }
+}
